--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-coming soon...
+# tanukijumonji.github.io
+<h1><center>5秒後にリダイレクトします</center><h1>
+<script>
+function update(timestamp) {
+
+	if (timestamp > 5000) {
+		window.location = 'https://tanukijumonji.wordpress.com';
+	} else {
+		// 5000秒以内は繰り返す
+		window.requestAnimationFrame(update);
+	}
+
+}
+
+window.requestAnimationFrame(update);
+</script>
