--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-# tanukijumonji.github.io
-<h1><center>5秒後にリダイレクトします</center><h1>
+<h1><center>このサイトは準備中です。5秒後にリダイレクトします</center><h1>
 <script>
 function update(timestamp) {
 
