--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 function update(timestamp) {
 
 	if (timestamp > 5000) {
-		window.location = 'https://tanukijumonji.wordpress.com';
+		window.location = 'https://tanukijumonji.livedoor.blog';
 	} else {
 		// 5000秒以内は繰り返す
 		window.requestAnimationFrame(update);
